--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation (
+    testImplementation(
             "com.codeborne:selenide:6.12.4",
-            "org.junit.jupiter:junit-jupiter:5.9.2")
-    testImplementation 'org.testng:testng:7.1.0'
-    testImplementation 'org.testng:testng:7.1.0'
-    testImplementation 'junit:junit:4.13.1'
+            "org.junit.jupiter:junit-jupiter:5.9.2",
+            "org.slf4j:slf4j-simple:2.0.7",
+            "com.github.javafaker:javafaker:1.0.2"
+    )
 }
-
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
