--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     )
 }
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
@@ -42,7 +43,9 @@ tasks.withType(Test) {
         }
     }
 }
-
+test {
+    useJUnitPlatform()
+}
 tasks.withType(Test) {
     testLogging {
         lifecycle {
